Added favicon and PNG link. Added Labels page. Changed header menu.

--- a/_data/header_menu.yml
+++ b/_data/header_menu.yml
@@ -1,6 +1,12 @@
 -
+ name: Home
+ link: /
+-
  name: Archive
  link: /archive
 -
  name: Other Web Sites
  link: /other-web-sites
+-
+ name: Labels
+ link: /labels
