Set timezone to America/Vancouver

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Vivi's blog
 description: "programmer, demigirl, mess"
 baseurl: ""
 url: "https://mincerafter42.github.io/"
-
+timezone: America/Vancouver
 
 markdown: kramdown
 
