Added "Link to Vivi's blog" page. Changed skip link text for second sidebar Added submenus Removed joke post from year 0001 Minor content change on Labels page

--- a/_data/header_menu.yml
+++ b/_data/header_menu.yml
@@ -11,5 +11,11 @@
  name: Labels
  link: /labels
 -
- name: Site Setup
- link: /site-setup
+ name: Sitely Content
+ submenu:
+ -
+  name: Site Setup
+  link: /site-setup
+ -
+  name: Link to Vivi's blog
+  link: /link-to-me
