--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ baseurl: ""
 url: "https://mincerafter42.github.io/"
 timezone: America/Vancouver
 
-markdown: kramdown
+kramdown:
+ smart_quotes: "39,39,34,34"
 
 permalink: pretty
 
