Added Atom and JSON feeds. Pages updated to reflect this info.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Vivi's blog
 description: "programmer, demigirl, mess"
 baseurl: ""
-url: "https://mincerafter42.github.io/"
+url: "https://mincerafter42.github.io"
 timezone: America/Vancouver
 
 kramdown:
