Some organization changes Listed some stuff I like on the index. Made a page for listing cool webcomics. Properly linked the syndication feeds in the head.

--- a/_data/header_menu.yml
+++ b/_data/header_menu.yml
@@ -7,6 +7,10 @@
 -
  name: Other Web Sites
  link: /other-web-sites
+ submenu:
+ -
+  name: Webcomics
+  link: /webcomics
 -
  name: Labels
  link: /labels
