--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ url: "https://mincerafter42.github.io"
 timezone: America/Vancouver
 encoding: "utf-8"
 git_repo_url: https://github.com/mincerafter42/mincerafter42.github.io
+incremental: true
 
 kramdown:
  smart_quotes: "39,39,34,34"
